// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments can be created with bare minimum 1`] = `
{
  "data": {
    "addComment": {
      "id": Any<String>,
      "itemID": Any<String>,
      "itemType": "Article",
      "parentID": null,
      "text": Any<Object>,
      "user": Any<Object>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Comments can get comments 1`] = `
{
  "data": {
    "comments": [
      {
        "createdAt": Any<Date>,
        "id": Any<String>,
        "itemID": Any<String>,
        "itemType": "Article",
        "modifiedAt": Any<Date>,
        "user": Any<Object>,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
